k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: setby-web
  namespace: setby

spec:
  type: ClusterIP

  selector:
    app: setby-web

  ports:
    - name: http
      port: 80
      targetPort: 3000
