k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: setby-web
  namespace: setby

spec:
  ingressClassName: nginx

  rules:
    - host: setby.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: setby-web
                port:
                  number: 80
